fix overlapping

--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -17,8 +17,10 @@
         padding: 4rem 0;
         text-align: center;
         overflow: hidden;
-        
+
         .hero-content {
+            position: relative;
+            z-index: 999;
             margin: 0 auto;
 
             h1 {
